--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="page_count">Page Count</string>
     <string name ="description">Description</string>
     <string name="details">Details</string>
+    <string name="no_results">No Results</string>
 </resources>
