search bar on adapter setup fixed. refactor viewmodel. empty fields in details page possible - default values

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name ="description">Description</string>
     <string name="details">Details</string>
     <string name="no_results">No Results</string>
+    <string name="error">Error occurred</string>
+    <string name="no_title">Empty title</string>
+    <string name="no_description">Empty description</string>
+    <string name="no_format">Empty format</string>
+    <string name="no_page_count">Empty page count</string>
 </resources>
