--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="remove_from_favourites">Remove from favourites</string>
     <string name="removed">Removed From Favourites List</string>
     <string name="added">Added To Favourites List</string>
+    <string name="favourites_movies">Favourites Movies</string>
 </resources>
