--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="search_for_a_movie">Search a movie…</string>
     <string name="format">Format</string>
     <string name="page_count">Page Count</string>
-    <string name ="description">Description</string>
+    <string name="description">Description</string>
     <string name="details">Details</string>
     <string name="no_results">No Results</string>
     <string name="error">Error occurred</string>
@@ -20,4 +20,15 @@
     <string name="home">Home</string>
     <string name="favourites">Favourites</string>
     <string name="settings">Settings</string>
+    <string name="signup">Sign Up</string>
+    <string name="login">Log in</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="enter_correct_data">Enter correct data and try again</string>
+    <string name="register_success">Registered successfully</string>
+    <string name="register_failure">Error has occurred</string>
+    <string name="login_success">Logged successfully</string>
+    <string name="login_failure">Failed to log in</string>
+    <string name="already_have_account">Already have an account?</string>
 </resources>
