--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="login_failure">Failed to log in</string>
     <string name="already_have_account">Already have an account?</string>
     <string name="add_success">Successfully added to favourites</string>
-    <string name="no_document">No document</string>
+    <string name="remove_success">Successfully removed</string>
     <string name="add_failure">Adding failure</string>
+    <string name="no_document">Document doesn\'t exist</string>
 </resources>
