--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,8 @@
     <string name="remove_success">Successfully removed</string>
     <string name="add_failure">Adding failure</string>
     <string name="no_document">Document doesn\'t exist</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="empty_favourite_list">You don\'t have favourite movies yet!</string>
+    <string name="dialog_title">Do you want to remove from favourites?</string>
+    <string name="cancelled">Cancelled</string>
+    <string name="remove_yes">Yes</string>
 </resources>
