--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
     <string name="logout">Log out</string>
     <string name="logout_success">Successfully logged out</string>
     <string name="logout_failure">Logout failure</string>
+    <string name="change_password_button">Change Password</string>
 </resources>
